# bl-notebook

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
devel/: .tool-versions  DEVEL.md
examples/: bl  rubik-cube.ipynb
src/bl_notebook/: cli.py  config.py  notebook.py  shortcut.py  util.py
src/bl_notebook/blender/: app.py  arch.py  criteria.py  filename.py  install_app.py  ostype.py  test_version.py  version.py
src/bl_notebook/blender/repository/: __init__.py  local.py  remote.py  repository.py
src/bl_notebook/blender_notebook/: installer.py  kernel.py  kernel_launcher.py
